Source/WebKit/StorageProcess/ServiceWorker/WebSWOriginStore.cpp
@@ -43,12 +43,21 @@ WebSWOriginStore::WebSWOriginStore()
 
 void WebSWOriginStore::add(const SecurityOrigin& origin)
 {
-    m_store.add(computeSharedStringHash(origin.toString()));
+    m_store.scheduleAddition(computeSharedStringHash(origin.toString()));
+    m_store.flushPendingChanges();
+}
+
+void WebSWOriginStore::addAll(const Vector<SecurityOrigin>& origins)
+{
+    for (auto& origin : origins)
+        m_store.scheduleAddition(computeSharedStringHash(origin.toString()));
+    m_store.flushPendingChanges();
 }
 
 void WebSWOriginStore::remove(const SecurityOrigin& origin)
 {
-    m_store.remove(computeSharedStringHash(origin.toString()));
+    m_store.scheduleRemoval(computeSharedStringHash(origin.toString()));
+    m_store.flushPendingChanges();
 }
 
 void WebSWOriginStore::clear()
